--- a/stnd.html
+++ b/stnd.html
@@ -1,5 +1,40 @@
 <!DOCTYPE html>
 <html>
+<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script>
+var map;
+function initialize() {
+  var mapProp = {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+    mapTypeId:google.maps.MapTypeId.HYBRID
+  };
+  map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+   google.maps.event.addListener(map, 'click', function(event) {
+    placeMarker(event.latLng);
+  });
+}
+
+
+function placeMarker(location) {
+  var marker = new google.maps.Marker({
+    position: location,
+    map: map,
+  });
+  var infowindow = new google.maps.InfoWindow({
+    content: 'Latitude: ' + location.lat() + '<br>Longitude: ' + location.lng()
+  });
+  document.getElementById("luogo_lat").value=location.lat();
+  document.getElementById("luogo_lon").value=location.lng();
+  infowindow.open(map,marker);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+google.maps.event.addDomListenerOnce(window, "resize", function() {
+ google.maps.event.trigger(map, "resize");
+});
+</script>
+
 <title>Cinguettio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
@@ -172,6 +207,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div class="w3-card-2 w3-round w3-white">
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">Pubblica un luogo</h6>
+			  <div class="w3-container w3-padding w3-hide-small" >
+				<div id="googleMap" class="w3-container w3-padding" style='width:100%;height:400px;' ></div>
+			  </div>
               <p><input id="luogo_lat" class="w3-input w3-border w3-hover-blue" type="text" placeholder="Inserisci latitudine"></p>
               <p><input id="luogo_lon" class="w3-input w3-border w3-hover-blue" type="text" placeholder="Inserisci longitudine"></p>
               <button type="button" class="w3-btn w3-theme" onclick=""><i class="fa fa-globe"></i>  Luogo</button>
