--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
          <ul class="w3-navbar">
           <li class="w3-theme-d2"><a href="#" onclick="openCity('post')"><strong>Post</strong></a></li>
           <li class="w3-theme-d2"><a href="#" onclick="openCity('immagine')"><strong>Immagine</strong></a></li>
-          <li class="w3-theme-d2"><a href="#" onclick="openCity('luogo')"><strong>Luogo</strong></a></li>
+          <li class="w3-theme-d2"><a href="#" onclick="openCity('luogo'); centerMap()"><strong>Luogo</strong></a></li>
          </ul>
 	    </div>
 	   </div>
@@ -173,7 +173,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">Pubblica un luogo</h6>
 			  <div class="w3-container w3-padding" >
-				<iframe id="map" frameborder="0" style="border:0;width:100%;height:300px;" src="https://www.google.com/maps/embed/v1/place?q=(-34.397,150.644)&key=AIzaSyD59XdvHyQE8yPhgo15Vk9IBqpyMbYPHmw" allowfullscreen></iframe>		
+				<div id="map" class="w3-container w3-padding" style='width:100%;height:400px;'></div>		
 			  </div>
               <p><input id="luogo_lat" class="w3-input w3-border w3-hover-blue" type="text" placeholder="Inserisci latitudine"></p>
               <p><input id="luogo_lon" class="w3-input w3-border w3-hover-blue" type="text" placeholder="Inserisci longitudine"></p>
@@ -270,6 +270,8 @@ function openNav() {
     }
 }
 </script>
+
+<script src="http://maps.googleapis.com/maps/api/js"></script>
 <script src="googlemap.js"></script>
 </body>
 </html> 
